force-app/main/default/objects/Outreach_Activity__c/Outreach_Activity__c.object-meta.xml
<CustomObject>
    <label>Outreach Activity</label><pluralLabel>Outreach Activities</pluralLabel>
    <nameField><label>Outreach Name</label><type>AutoNumber</type><displayFormat>OA-{00000}</displayFormat></nameField>
<sharingModel>ControlledByParent</sharingModel>
<enableActivities>true</enableActivities>
</CustomObject>