force-app/main/default/objects/Outreach_Activity__c/fields/Drug__c.field-meta.xml
<CustomField>
    <fullName>Drug__c</fullName><label>Drug</label><type>Lookup</type>
    <referenceTo>Drug__c</referenceTo>
    <relationshipName>OA_Drug</relationshipName>
    <relationshipLabel>Outreach Activities</relationshipLabel>
</CustomField>