force-app/main/default/objects/Outreach_Activity__c/fields/Enrollee__c.field-meta.xml
<CustomField>
    <fullName>Enrollee__c</fullName><label>Enrollee</label><type>Lookup</type>
    <referenceTo>CareProgramEnrollee</referenceTo>
    <relationshipLabel>Outreach Activities</relationshipLabel>
    <relationshipName>Outreach_Activities</relationshipName><required>true</required>
</CustomField>