force-app/main/default/objects/Outreach_Activity__c/fields/Outcome_Notes__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Notes__c</fullName><label>Outcome Notes</label><type>TextArea</type>
</CustomField>