force-app/main/default/objects/Outreach_Activity__c/fields/Outreach_Status__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Status__c</fullName><label>Outreach Status</label><type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Scheduled</fullName><default>true</default><label>Scheduled</label></value>
        <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
        <value><fullName>No Answer</fullName><default>false</default><label>No Answer</label></value>
        <value><fullName>Opted Out</fullName><default>false</default><label>Opted Out</label></value>
    </valueSetDefinition></valueSet>
</CustomField>