force-app/main/default/objects/Outreach_Activity__c/fields/Outreach_Type__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Type__c</fullName><label>Outreach Type</label><type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Welcome Call</fullName><default>false</default><label>Welcome Call</label></value>
        <value><fullName>Check-In Call</fullName><default>false</default><label>Check-In Call</label></value>
        <value><fullName>Refill Reminder</fullName><default>false</default><label>Refill Reminder</label></value>
        <value><fullName>Adherence Call</fullName><default>false</default><label>Adherence Call</label></value>
        <value><fullName>SMS</fullName><default>false</default><label>SMS</label></value>
        <value><fullName>Email</fullName><default>false</default><label>Email</label></value>
    </valueSetDefinition></valueSet>
</CustomField>